Fix: links to index.html not work I changed path to the index.html from: 	modified:   recipes/polskie_pierogi.html 	modified:   recipes/red_velvet_pots.html 	modified:   recipes/stuffed_cabbage_rolls.html. I changed path to img folder.

--- a/recipes/red_velvet_pots.html
+++ b/recipes/red_velvet_pots.html
@@ -8,14 +8,14 @@
     <body>
         <header>
             <h1>Red Velvet Pots de Creme</h1>
-            <a href="/index.html">Home</a>
+            <a href="../index.html">Home</a>
         </header>
         <main>
             <section>
                 <h2>Delicious dessert for special person</h2>
                 <figure>
                     <img
-                        src="/img/8781823_Red-Velvet-Pots-de-Creme_John-Mitzewich_4x3-d9c1c7bf3d094b3ea46bcac81d0e1d04.webp"
+                        src="../img/8781823_Red-Velvet-Pots-de-Creme_John-Mitzewich_4x3-d9c1c7bf3d094b3ea46bcac81d0e1d04.webp"
                         alt="Red velvet pots de creme"
                     />
                     <figcaption>
