--- a/recipes/polskie_pierogi.html
+++ b/recipes/polskie_pierogi.html
@@ -8,14 +8,14 @@
     <body>
         <header>
             <h1>Grandma's Polish Dumplings</h1>
-            <a href="/index.html">Home</a>
+            <a href="../index.html">Home</a>
         </header>
         <main>
             <section>
                 <h2>Traditional Polish Dumplings (Pierogi)</h2>
                 <figure>
                     <img
-                        src="/img/food-8450082_640.jpg"
+                        src="../img/food-8450082_640.jpg"
                         alt="Red velvet pots de creme"
                     />
                     <figcaption>
