--- a/recipes/stuffed_cabbage_rolls.html
+++ b/recipes/stuffed_cabbage_rolls.html
@@ -8,14 +8,14 @@
     <body>
         <header>
             <h1>Stuffed Cabbage Rolls</h1>
-            <a href="/index.html">Home</a>
+            <a href="../index.html">Home</a>
         </header>
         <main>
             <section>
                 <h2>Tasty Polish Cabbage Rolls</h2>
                 <figure>
                     <img
-                        src="/img/cabbage-rolls-468384_640.jpg"
+                        src="../img/cabbage-rolls-468384_640.jpg"
                         alt="Stuffed Cabbage Rolls"
                     />
                     <figcaption>
