Feat: CSS style Basic style applied to: 	new file:   css/style.css 	modified:   index.html 	modified:   recipes/polskie_pierogi.html 	modified:   recipes/red_velvet_pots.html 	modified:   recipes/stuffed_cabbage_rolls.html

--- a/recipes/polskie_pierogi.html
+++ b/recipes/polskie_pierogi.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Grandma's Polish Dumplings</title>
+        <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
-        <header>
+        <header class="container">
             <h1>Grandma's Polish Dumplings</h1>
             <a href="../index.html">Home</a>
         </header>
-        <main>
+        <main class="container">
             <section>
                 <h2>Traditional Polish Dumplings (Pierogi)</h2>
                 <figure>
