--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Odin recipes</title>
+        <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
-        <header>
+        <header class="container">
             <h1>Odin Recipes</h1>
             <nav>
                 <ul>
@@ -28,6 +29,5 @@
                 </ul>
             </nav>
         </header>
-        <main></main>
     </body>
 </html>
