--- a/recipes/red_velvet_pots.html
+++ b/recipes/red_velvet_pots.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Red Velvet Pots de Creme</title>
+        <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
-        <header>
+        <header class="container">
             <h1>Red Velvet Pots de Creme</h1>
             <a href="../index.html">Home</a>
         </header>
-        <main>
+        <main class="container">
             <section>
                 <h2>Delicious dessert for special person</h2>
                 <figure>
