--- a/recipes/stuffed_cabbage_rolls.html
+++ b/recipes/stuffed_cabbage_rolls.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Stuffed Cabbage Rolls</title>
+        <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
-        <header>
+        <header class="container">
             <h1>Stuffed Cabbage Rolls</h1>
             <a href="../index.html">Home</a>
         </header>
-        <main>
+        <main class="container">
             <section>
                 <h2>Tasty Polish Cabbage Rolls</h2>
                 <figure>
